style.css
/* ... */
@media screen and (max-width: 600px) {
  .personal-background .row:nth-child(1), 
  .personal-background .row:nth-child(2), 
  .personal-background .row:nth-child(3) {
    align-self: center;
  }

  .introduction.container {
    position: relative;
    left: 0;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 2rem;
  }

  .technical {
    grid-template-columns: auto;
  }
}

@media screen and (max-width: 465px) {
  .project-section {
    padding-top: 4rem;
  }

  .profile img {
    width: 100%;
    min-width: 0rem;
  }

  .skills-grid {
    grid-template-columns: none;
    grid-template-rows: auto auto auto;
  }

  .personal-background .row {
    min-width: 10rem;
    width: 100%;
  }

  .nav-toggle {
    display: block;
    position: relative;
    top: 0;
    right: 0;
    z-index: 1000;
  }

  .primary-navigation {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 10;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center; 
    padding: 6rem 0rem;
    background-color: rgb(255,255,255,0.8);
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px);
    width: 90%;
    height: 100%;
    box-shadow: 0 0 1rem 1rem rgb(0,0,0,0.2);
    transform: translateX(150%);
    transition: transform 350ms ease-out;
  }

  .primary-navigation[data-visible="true"] {
    transform: translateX(0%);
  }

  .primary-navigation[data-visible="true"] + .nav-toggle {
    position: fixed;
    top: 2rem;
    right: 2rem;
  }

  .nav-dropdown-hover-item {
    text-align: center;
  }

  .primary-navigation[data-visible="true"] .nav-dropdown-content {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1rem;
    align-items: center;
  }

  .primary-navigation[data-visible="true"] .nav-dropdown-content a {
    padding: 0rem;
  }
}

/* animations */
/* ----------------------------------------------
 * Generated by Animista on 2023-1-16 1:18:41
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation tilt-in-top-1
 * ----------------------------------------
 */
 .tilt-in-top-1 {
	-webkit-animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}
 @-webkit-keyframes tilt-in-top-1 {
  0% {
    -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
            transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
            transform: rotateY(0deg) translateY(0) skewY(0deg);
    opacity: 1;
  }
}
@keyframes tilt-in-top-1 {
  0% {
    -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
            transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
            transform: rotateY(0deg) translateY(0) skewY(0deg);
    opacity: 1;
  }
}

.tilt-in-top-1:nth-child(1) {
  animation-delay: 500ms;
}
.tilt-in-top-1:nth-child(2) {
  animation-delay: 1000ms;
}
.tilt-in-top-1:nth-child(3) {
  animation-delay: 1500ms;
}

.technical .tilt-in-top-1:nth-child(1) {
  animation-delay: 1s;
}

.technical .tilt-in-top-1:nth-child(2) {
  animation-delay: 1.5s;
}
.technical .tilt-in-top-1:nth-child(3) {
  animation-delay: 2s;
}

.tilt-in-top-1.project-block {
  animation-delay: 1s;
}
.tilt-in-top-1.project-summary {
  animation-delay: 1.5s;
}
.tilt-in-top-1:nth-child(3).project-section {
  animation-delay: 2.0s;
}
.tilt-in-top-1:nth-child(4).project-section {
  animation-delay: 2.5s;
}
.tilt-in-top-1:nth-child(5).project-section {
  animation-delay: 3.0s;
}
.tilt-in-top-1:nth-child(6).project-section {
  animation-delay: 3.5s;
}
.tilt-in-top-1:nth-child(7).project-section {
  animation-delay: 4.0s;
}
.tilt-in-top-1:nth-child(8).project-section {
  animation-delay: 4.5s;
}

/* ----------------------------------------------
 * Generated by Animista on 2023-1-16 1:31:8
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation flip-in-hor-bottom
 * ----------------------------------------
 */ 
 
 .flip-in-hor-bottom {
	-webkit-animation: flip-in-hor-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: flip-in-hor-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

 @-webkit-keyframes flip-in-hor-bottom {
  0% {
    -webkit-transform: rotateX(80deg);
            transform: rotateX(80deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateX(0);
            transform: rotateX(0);
    opacity: 1;
  }
}
@keyframes flip-in-hor-bottom {
  0% {
    -webkit-transform: rotateX(80deg);
            transform: rotateX(80deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateX(0);
            transform: rotateX(0);
    opacity: 1;
  }
}
.flip-in-hor-bottom:nth-child(1) {
  animation-delay: 0ms;
}
.flip-in-hor-bottom:nth-child(2) {
  animation-delay: 500ms;
}
.flip-in-hor-bottom:nth-child(3) {
  animation-delay: 1000ms;
}
.flip-in-hor-bottom:nth-child(4) {
  animation-delay: 1500ms;
}
.flip-in-hor-bottom:nth-child(5) {
  animation-delay: 2000ms;
}
.flip-in-hor-bottom:nth-child(6) {
  animation-delay: 2500ms;
}
.flip-in-hor-bottom:nth-child(7) {
  animation-delay: 3000ms;
}
.flip-in-hor-bottom:nth-child(8) {
  animation-delay: 3500ms;
}
.flip-in-hor-bottom:nth-child(9) {
  animation-delay: 4000ms;
}
/* ... */

